syntax = "proto3";

option csharp_namespace = "Unicorn.Core.Development.ServiceHost.Protos";

package MyGrpcService;

service MyGrpcService{
	rpc MultiplyAsync(MultiplicationRequest) returns (MultiplicationResponse);
}

 message MultiplicationRequest{
	int32 FirstOperand = 1;
	int32 SecondOperand = 2;
};

message MultiplicationResponse{
	int32 Result = 1;
};